# cpp-classroom-2425-sem02-control02-solution

./: .gitignore  CMakeLists.txt  README.adoc
.github/classroom/: autograding.json
src/task_1/: buffer.hpp  buffer_smoke_test.cpp
src/task_2/: idlloader.hpp  json_parser.cpp  phonebook.hpp  phonebook_smoke_test.cpp
src/task_2/unix/: dlloader.hpp
src/task_3/: matrix_smoke_test.cpp
